src/vm/FunctionParser.java
package vm;// $ANTLR 3.2 Sep 23, 2009 12:02:23 E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g 2011-07-07 16:27:07

import org.antlr.runtime.*;

import org.antlr.runtime.tree.*;

public class FunctionParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "FUNCTION", "PARAMATERS", "PARAM", "BLOCK", "STMTS", "ASSIGN", "NOP", "EXPR", "NUM", "VAR", "NOT", "NEGATE", "CALL", "HALT", "ID", "RETURN", "WHILE", "IF", "NUMBER", "NEWLINE", "WS", "'('", "')'", "','", "'{'", "'}'", "';'", "'do'", "'for'", "'else'", "'unless'", "'='", "'||'", "'&&'", "'=='", "'!='", "'>'", "'<'", "'<='", "'>='", "'+'", "'-'", "'*'", "'/'", "'!'"
    };
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int EXPR=11;
    public static final int NEWLINE=23;
    public static final int ASSIGN=9;
    public static final int PARAM=6;
    public static final int BLOCK=7;
    public static final int PARAMATERS=5;
    public static final int NUM=12;
    public static final int CALL=16;
    public static final int WS=24;
    public static final int EOF=-1;
    public static final int FUNCTION=4;
    public static final int NUMBER=22;
    public static final int HALT=17;
    public static final int T__48=48;
    public static final int T__47=47;
    public static final int T__46=46;
    public static final int T__45=45;
    public static final int T__44=44;
    public static final int T__43=43;
    public static final int NOT=14;
    public static final int T__42=42;
    public static final int T__41=41;
    public static final int T__40=40;
    public static final int RETURN=19;
    public static final int NOP=10;
    public static final int IF=21;
    public static final int ID=18;
    public static final int T__39=39;
    public static final int T__38=38;
    public static final int T__37=37;
    public static final int T__36=36;
    public static final int T__35=35;
    public static final int T__34=34;
    public static final int T__33=33;
    public static final int T__32=32;
    public static final int T__31=31;
    public static final int WHILE=20;
    public static final int T__30=30;
    public static final int STMTS=8;
    public static final int VAR=13;
    public static final int NEGATE=15;

    // delegates
    // delegators


        public FunctionParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public FunctionParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return FunctionParser.tokenNames; }
    public String getGrammarFileName() { return "E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g"; }


        private String errMsg = "";
        public void emitErrorMessage(String msg) {
             errMsg =msg;
             throw new SyntaxErrorException(msg);
        }
        public String getErrorMessage(){
        	return errMsg;
        }


    public static class prog_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "prog"
    // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:32:1: prog : ( funDecl )+ ;
    public final FunctionParser.prog_return prog() throws RecognitionException {
        FunctionParser.prog_return retval = new FunctionParser.prog_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        FunctionParser.funDecl_return funDecl1 = null;



        try {
            // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:32:5: ( ( funDecl )+ )
            // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:32:7: ( funDecl )+
            {
            root_0 = (CommonTree)adaptor.nil();

            // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:32:7: ( funDecl )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==ID) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:32:7: funDecl
            	    {
            	    pushFollow(FOLLOW_funDecl_in_prog91);
            	    funDecl1=funDecl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, funDecl1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "prog"

    public static class funDecl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "funDecl"
    // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:35:1: funDecl : name= ID '(' paramDeclList ')' act= block -> ^( FUNCTION $name ( ^( PARAMATERS paramDeclList ) )? $act) ;
    public final FunctionParser.funDecl_return funDecl() throws RecognitionException {
        FunctionParser.funDecl_return retval = new FunctionParser.funDecl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token name=null;
        Token char_literal2=null;
        Token char_literal4=null;
        FunctionParser.block_return act = null;

        FunctionParser.paramDeclList_return paramDeclList3 = null;


        CommonTree name_tree=null;
        CommonTree char_literal2_tree=null;
        CommonTree char_literal4_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_26=new RewriteRuleTokenStream(adaptor,"token 26");
        RewriteRuleTokenStream stream_25=new RewriteRuleTokenStream(adaptor,"token 25");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        RewriteRuleSubtreeStream stream_paramDeclList=new RewriteRuleSubtreeStream(adaptor,"rule paramDeclList");
        try {
            // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:36:2: (name= ID '(' paramDeclList ')' act= block -> ^( FUNCTION $name ( ^( PARAMATERS paramDeclList ) )? $act) )
            // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:36:4: name= ID '(' paramDeclList ')' act= block
            {
            name=(Token)match(input,ID,FOLLOW_ID_in_funDecl106); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(name);

            char_literal2=(Token)match(input,25,FOLLOW_25_in_funDecl108); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_25.add(char_literal2);

            pushFollow(FOLLOW_paramDeclList_in_funDecl110);
            paramDeclList3=paramDeclList();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_paramDeclList.add(paramDeclList3.getTree());
            char_literal4=(Token)match(input,26,FOLLOW_26_in_funDecl112); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_26.add(char_literal4);

            pushFollow(FOLLOW_block_in_funDecl116);
            act=block();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_block.add(act.getTree());


            // AST REWRITE
            // elements: name, act, paramDeclList
            // token labels: name
            // rule labels: act, retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleTokenStream stream_name=new RewriteRuleTokenStream(adaptor,"token name",name);
            RewriteRuleSubtreeStream stream_act=new RewriteRuleSubtreeStream(adaptor,"rule act",act!=null?act.tree:null);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 36:44: -> ^( FUNCTION $name ( ^( PARAMATERS paramDeclList ) )? $act)
            {
                // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:36:47: ^( FUNCTION $name ( ^( PARAMATERS paramDeclList ) )? $act)
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(FUNCTION, "FUNCTION"), root_1);

                adaptor.addChild(root_1, stream_name.nextNode());
                // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:36:64: ( ^( PARAMATERS paramDeclList ) )?
                if ( stream_paramDeclList.hasNext() ) {
                    // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:36:64: ^( PARAMATERS paramDeclList )
                    {
                    CommonTree root_2 = (CommonTree)adaptor.nil();
                    root_2 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(PARAMATERS, "PARAMATERS"), root_2);

                    adaptor.addChild(root_2, stream_paramDeclList.nextTree());

                    adaptor.addChild(root_1, root_2);
                    }

                }
                stream_paramDeclList.reset();
                adaptor.addChild(root_1, stream_act.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "funDecl"

    public static class paramDeclList_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "paramDeclList"
    // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:39:1: paramDeclList : ( paramDecl ( ',' paramDecl )* )? -> ( paramDecl )* ;
    public final FunctionParser.paramDeclList_return paramDeclList() throws RecognitionException {
        FunctionParser.paramDeclList_return retval = new FunctionParser.paramDeclList_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal6=null;
        FunctionParser.paramDecl_return paramDecl5 = null;

        FunctionParser.paramDecl_return paramDecl7 = null;


        CommonTree char_literal6_tree=null;
        RewriteRuleTokenStream stream_27=new RewriteRuleTokenStream(adaptor,"token 27");
        RewriteRuleSubtreeStream stream_paramDecl=new RewriteRuleSubtreeStream(adaptor,"rule paramDecl");
        try {
            // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:40:2: ( ( paramDecl ( ',' paramDecl )* )? -> ( paramDecl )* )
            // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:40:4: ( paramDecl ( ',' paramDecl )* )?
            {
            // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:40:4: ( paramDecl ( ',' paramDecl )* )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==ID) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:40:5: paramDecl ( ',' paramDecl )*
                    {
                    pushFollow(FOLLOW_paramDecl_in_paramDeclList146);
                    paramDecl5=paramDecl();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_paramDecl.add(paramDecl5.getTree());
                    // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:40:15: ( ',' paramDecl )*
                    loop2:
                    do {
                        int alt2=2;
                        int LA2_0 = input.LA(1);

                        if ( (LA2_0==27) ) {
                            alt2=1;
                        }


                        switch (alt2) {
                    	case 1 :
                    	    // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:40:16: ',' paramDecl
                    	    {
                    	    char_literal6=(Token)match(input,27,FOLLOW_27_in_paramDeclList149); if (state.failed) return retval; 
                    	    if ( state.backtracking==0 ) stream_27.add(char_literal6);

                    	    pushFollow(FOLLOW_paramDecl_in_paramDeclList151);
                    	    paramDecl7=paramDecl();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) stream_paramDecl.add(paramDecl7.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop2;
                        }
                    } while (true);


                    }
                    break;

            }



            // AST REWRITE
            // elements: paramDecl
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 40:34: -> ( paramDecl )*
            {
                // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:40:37: ( paramDecl )*
                while ( stream_paramDecl.hasNext() ) {
                    adaptor.addChild(root_0, stream_paramDecl.nextTree());

                }
                stream_paramDecl.reset();

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "paramDeclList"

    public static class paramDecl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "paramDecl"
    // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:43:1: paramDecl : ID -> ^( PARAM ID ) ;
    public final FunctionParser.paramDecl_return paramDecl() throws RecognitionException {
        FunctionParser.paramDecl_return retval = new FunctionParser.paramDecl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token ID8=null;

        CommonTree ID8_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");

        try {
            // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:44:2: ( ID -> ^( PARAM ID ) )
            // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:44:4: ID
            {
            ID8=(Token)match(input,ID,FOLLOW_ID_in_paramDecl170); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(ID8);



            // AST REWRITE
            // elements: ID
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 44:7: -> ^( PARAM ID )
            {
                // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:44:10: ^( PARAM ID )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(PARAM, "PARAM"), root_1);

                adaptor.addChild(root_1, stream_ID.nextNode());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "paramDecl"

    public static class block_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "block"
    // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:47:1: block : '{' stmts= stmtList '}' -> ^( BLOCK ^( STMTS $stmts) ) ;
    public final FunctionParser.block_return block() throws RecognitionException {
        FunctionParser.block_return retval = new FunctionParser.block_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal9=null;
        Token char_literal10=null;
        FunctionParser.stmtList_return stmts = null;


        CommonTree char_literal9_tree=null;
        CommonTree char_literal10_tree=null;
        RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");
        RewriteRuleTokenStream stream_28=new RewriteRuleTokenStream(adaptor,"token 28");
        RewriteRuleSubtreeStream stream_stmtList=new RewriteRuleSubtreeStream(adaptor,"rule stmtList");
        try {
            // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:48:2: ( '{' stmts= stmtList '}' -> ^( BLOCK ^( STMTS $stmts) ) )
            // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:48:4: '{' stmts= stmtList '}'
            {
            char_literal9=(Token)match(input,28,FOLLOW_28_in_block190); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_28.add(char_literal9);

            pushFollow(FOLLOW_stmtList_in_block194);
            stmts=stmtList();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_stmtList.add(stmts.getTree());
            char_literal10=(Token)match(input,29,FOLLOW_29_in_block196); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_29.add(char_literal10);



            // AST REWRITE
            // elements: stmts
            // token labels: 
            // rule labels: stmts, retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_stmts=new RewriteRuleSubtreeStream(adaptor,"rule stmts",stmts!=null?stmts.tree:null);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 48:27: -> ^( BLOCK ^( STMTS $stmts) )
            {
                // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:48:30: ^( BLOCK ^( STMTS $stmts) )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(BLOCK, "BLOCK"), root_1);

                // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:48:38: ^( STMTS $stmts)
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(STMTS, "STMTS"), root_2);

                adaptor.addChild(root_2, stream_stmts.nextTree());

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "block"

    public static class stmtList_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "stmtList"
    // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:51:1: stmtList : ( stmt )* ;
    public final FunctionParser.stmtList_return stmtList() throws RecognitionException {
        FunctionParser.stmtList_return retval = new FunctionParser.stmtList_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        FunctionParser.stmt_return stmt11 = null;



        try {
            // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:51:9: ( ( stmt )* )
            // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:51:11: ( stmt )*
            {
            root_0 = (CommonTree)adaptor.nil();

            // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:51:11: ( stmt )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( ((LA4_0>=ID && LA4_0<=NUMBER)||LA4_0==25||LA4_0==28||(LA4_0>=31 && LA4_0<=32)||LA4_0==34||LA4_0==45||LA4_0==48) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:51:11: stmt
            	    {
            	    pushFollow(FOLLOW_stmt_in_stmtList217);
            	    stmt11=stmt();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, stmt11.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "stmtList"

    public static class stmt_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "stmt"
    // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:54:1: stmt : ( RETURN expr ';' -> ^( RETURN expr ) | ifStmt | WHILE '(' expr ')' stmt -> ^( WHILE expr stmt ) | 'do' stmt WHILE '(' expr ')' -> stmt ^( WHILE expr stmt ) | 'for' '(' ini= expr ';' tes= expr ';' inc= expr ')' stmt -> $ini ^( WHILE $tes ^( BLOCK ^( STMTS stmt $inc) ) ) | block | expr ';' -> expr );
    public final FunctionParser.stmt_return stmt() throws RecognitionException {
        FunctionParser.stmt_return retval = new FunctionParser.stmt_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token RETURN12=null;
        Token char_literal14=null;
        Token WHILE16=null;
        Token char_literal17=null;
        Token char_literal19=null;
        Token string_literal21=null;
        Token WHILE23=null;
        Token char_literal24=null;
        Token char_literal26=null;
        Token string_literal27=null;
        Token char_literal28=null;
        Token char_literal29=null;
        Token char_literal30=null;
        Token char_literal31=null;
        Token char_literal35=null;
        FunctionParser.expr_return ini = null;

        FunctionParser.expr_return tes = null;

        FunctionParser.expr_return inc = null;

        FunctionParser.expr_return expr13 = null;

        FunctionParser.ifStmt_return ifStmt15 = null;

        FunctionParser.expr_return expr18 = null;

        FunctionParser.stmt_return stmt20 = null;

        FunctionParser.stmt_return stmt22 = null;

        FunctionParser.expr_return expr25 = null;

        FunctionParser.stmt_return stmt32 = null;

        FunctionParser.block_return block33 = null;

        FunctionParser.expr_return expr34 = null;


        CommonTree RETURN12_tree=null;
        CommonTree char_literal14_tree=null;
        CommonTree WHILE16_tree=null;
        CommonTree char_literal17_tree=null;
        CommonTree char_literal19_tree=null;
        CommonTree string_literal21_tree=null;
        CommonTree WHILE23_tree=null;
        CommonTree char_literal24_tree=null;
        CommonTree char_literal26_tree=null;
        CommonTree string_literal27_tree=null;
        CommonTree char_literal28_tree=null;
        CommonTree char_literal29_tree=null;
        CommonTree char_literal30_tree=null;
        CommonTree char_literal31_tree=null;
        CommonTree char_literal35_tree=null;
        RewriteRuleTokenStream stream_32=new RewriteRuleTokenStream(adaptor,"token 32");
        RewriteRuleTokenStream stream_31=new RewriteRuleTokenStream(adaptor,"token 31");
        RewriteRuleTokenStream stream_30=new RewriteRuleTokenStream(adaptor,"token 30");
        RewriteRuleTokenStream stream_26=new RewriteRuleTokenStream(adaptor,"token 26");
        RewriteRuleTokenStream stream_25=new RewriteRuleTokenStream(adaptor,"token 25");
        RewriteRuleTokenStream stream_WHILE=new RewriteRuleTokenStream(adaptor,"token WHILE");
        RewriteRuleTokenStream stream_RETURN=new RewriteRuleTokenStream(adaptor,"token RETURN");
        RewriteRuleSubtreeStream stream_stmt=new RewriteRuleSubtreeStream(adaptor,"rule stmt");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        try {
            // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:55:5: ( RETURN expr ';' -> ^( RETURN expr ) | ifStmt | WHILE '(' expr ')' stmt -> ^( WHILE expr stmt ) | 'do' stmt WHILE '(' expr ')' -> stmt ^( WHILE expr stmt ) | 'for' '(' ini= expr ';' tes= expr ';' inc= expr ')' stmt -> $ini ^( WHILE $tes ^( BLOCK ^( STMTS stmt $inc) ) ) | block | expr ';' -> expr )
            int alt5=7;
            switch ( input.LA(1) ) {
            case RETURN:
                {
                alt5=1;
                }
                break;
            case IF:
            case 34:
                {
                alt5=2;
                }
                break;
            case WHILE:
                {
                alt5=3;
                }
                break;
            case 31:
                {
                alt5=4;
                }
                break;
            case 32:
                {
                alt5=5;
                }
                break;
            case 28:
                {
                alt5=6;
                }
                break;
            case ID:
            case NUMBER:
            case 25:
            case 45:
            case 48:
                {
                alt5=7;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }

            switch (alt5) {
                case 1 :
                    // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:56:4: RETURN expr ';'
                    {
                    RETURN12=(Token)match(input,RETURN,FOLLOW_RETURN_in_stmt236); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_RETURN.add(RETURN12);

                    pushFollow(FOLLOW_expr_in_stmt238);
                    expr13=expr();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_expr.add(expr13.getTree());
                    char_literal14=(Token)match(input,30,FOLLOW_30_in_stmt240); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_30.add(char_literal14);



                    // AST REWRITE
                    // elements: expr, RETURN
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 56:20: -> ^( RETURN expr )
                    {
                        // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:56:23: ^( RETURN expr )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(stream_RETURN.nextNode(), root_1);

                        adaptor.addChild(root_1, stream_expr.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 2 :
                    // E:\\MyEclipse\\workspace\\antlr_app\\src\\Function.g:57:4: ifStmt
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_ifStmt_in_stmt253);
                    ifStmt15=ifStmt();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, ifStmt15.getTree());
